made the nav bar

--- a/src/app.css
+++ b/src/app.css
@@ -1,79 +1,116 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  --bg-color: #323232;
+  --text-color: #ffffff;
+  --top-color: #121212;
+  --highlight-color: #cc5566;
+  --highlight-text: #fff;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+.light-mode {
+  --bg-color: #ffffff;
+  --text-color: #000000;
+  --top-color: #dddddd;
+  --highlight-color: #5555cc;
+  --highlight-text: #ffffff;
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  transition:
+    background-color 0.3s,
+    color 0.3s;
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.home-glow-div {
+  --angle: 0deg;
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: conic-gradient(
+    from var(--angle),
+    transparent,
+    var(--highlight-color),
+    transparent,
+    var(--highlight-color),
+    transparent
+  );
+  animation: rotate-border infinite 4s linear;
 }
 
-.card {
-  padding: 2em;
-}
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
+@keyframes rotate-border {
+  to {
+    --angle: 360deg;
   }
-  a:hover {
-    color: #747bff;
+}
+
+@property --angle {
+  syntax: "<angle>";
+  initial-value: 0deg;
+  inherits: false;
+}
+
+.typewriter {
+  font-family: monospace;
+  overflow: hidden;
+  border-right: 0.2rem solid var(--text-color);
+  letter-spacing: 0.2rem;
+  white-space: nowrap;
+  animation:
+    typewriter 3s steps(30, end),
+    blinking 0.75s step-end infinite;
+}
+
+@keyframes typewriter {
+  from {
+    width: 0%;
   }
-  button {
-    background-color: #f9f9f9;
+
+  to {
+    width: 100%;
+  }
+}
+
+@keyframes blinking {
+  from,
+  to {
+    border-color: transparent;
+  }
+
+  50% {
+    border-color: var(--text-color);
+  }
+}
+
+.hover-grow:hover {
+  background-color: var(--highlight-color);
+  transform: scale(1.1);
+  transition: all ease-out 0.25s;
+  color: var(--highlight-text);
+  animation: button-hover 1s ease-in-out infinite;
+}
+
+.hover-grow:active {
+  transform: scale(0.9);
+  transition: all ease-in 0.05s;
+  animation: none;
+  background-color: var(--highlight-color);
+  color: var(--highlight-text);
+}
+
+@keyframes button-hover {
+  25% {
+    transform: rotate(10deg);
+  }
+
+  75% {
+    transform: rotate(-10deg);
   }
 }
